# export_and_pruning_nanoOCR

./: bag_of_words.py  benchmark_models_comparison.py  find_empty_images.py  heatmap_vsualizer.py  main.py  model_onnx_export.py  model_pytorch_export.py  ocr.py  ocr_based_on_area.py  ocr_comparisons.py  ocr_on_selected_images.py  paths.py  postprocess.py  pyproject.toml  pytorch_inference.py  unsupervised_text_clustering.py
clustering_out/: clusters.csv  metrics.json  tm_similarity_matrix.npy
results/: page_00000018_desk_fp16_resized_40.txt  page_00000018_desk_fp16_resized_41.txt  page_00000018_desk_fp16_resized_42.txt  page_00000018_desk_fp16_resized_43.txt  page_00000018_desk_fp16_resized_44.txt  page_00000018_desk_fp16_resized_45.txt  page_00000018_desk_fp16_resized_46.txt  page_00000018_desk_fp16_resized_47.txt  page_00000018_desk_fp16_resized_48.txt  page_00000018_desk_fp16_resized_49.txt  page_00000018_desk_fp16_resized_50.txt  page_00000018_desk_fp16_resized_51.txt  page_00000018_desk_fp16_resized_52.txt  page_00000018_desk_fp16_resized_53.txt  page_00000018_desk_fp16_resized_54.txt  page_00000018_desk_fp16_resized_55.txt  page_00000018_desk_fp16_resized_56.txt  page_00000018_desk_fp16_resized_57.txt  page_00000018_desk_fp16_resized_58.txt  page_00000018_desk_fp16_resized_59.txt  page_00000018_desk_fp16_resized_60.txt  page_00000018_desk_fp16_resized_61.txt  page_00000018_desk_fp16_resized_62.txt  page_00000018_desk_fp16_resized_63.txt  page_00000018_desk_fp16_resized_64.txt  page_00000018_desk_fp16_resized_65.txt  page_00000018_desk_fp16_resized_66.txt  (+4 more)
